{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 311,
  "lineage": "e8f0497c-0c20-b671-6b59-765c8f38ed08",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw_E5E304CC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:961341519925:internet-gateway/igw-043f23ef2e3ea4611",
            "id": "igw-043f23ef2e3ea4611",
            "owner_id": "961341519925",
            "tags": {
              "Name": "layerx-eks-igw"
            },
            "tags_all": {
              "Name": "layerx-eks-igw"
            },
            "vpc_id": "vpc-01dcd84644d12f34c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_public-route_F447845C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-043f23ef2e3ea4611",
            "id": "r-rtb-0a890ddc6d4cc41801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a890ddc6d4cc4180",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_igw_E5E304CC",
            "aws_route_table.vpc_public-rtb_E3600128",
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public-rtb_E3600128",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:961341519925:route-table/rtb-0a890ddc6d4cc4180",
            "id": "rtb-0a890ddc6d4cc4180",
            "owner_id": "961341519925",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043f23ef2e3ea4611",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "layerx-eks-public-rtb"
            },
            "tags_all": {
              "Name": "layerx-eks-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01dcd84644d12f34c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_6776A399"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_public-rta-1_CA1395F4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f2b076aa79e7b9c",
            "route_table_id": "rtb-0a890ddc6d4cc4180",
            "subnet_id": "subnet-0a8bafe627f9ed646"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_public-rtb_E3600128",
            "aws_subnet.vpc_public-subnet-1_B6E44E35",
            "aws_vpc.vpc_6776A399",
            "data.aws_region.vpc_current_561DBC69"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_public-rta-2_F1EC92DC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dbdd4444ca4af23",
            "route_table_id": "rtb-0a890ddc6d4cc4180",
            "subnet_id": "subnet-01c76a636fcaf2632"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_public-rtb_E3600128",
            "aws_subnet.vpc_public-subnet-2_50BC5771",
            "aws_vpc.vpc_6776A399",
            "data.aws_region.vpc_current_561DBC69"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_public-subnet-1_B6E44E35",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:961341519925:subnet/subnet-0a8bafe627f9ed646",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8bafe627f9ed646",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961341519925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "layerx-eks-public-subnet-1",
              "kubernetes.io/cluster/layerx-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "layerx-eks-public-subnet-1",
              "kubernetes.io/cluster/layerx-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01dcd84644d12f34c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_6776A399",
            "data.aws_region.vpc_current_561DBC69"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_public-subnet-2_50BC5771",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:961341519925:subnet/subnet-01c76a636fcaf2632",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c76a636fcaf2632",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961341519925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "layerx-eks-public-subnet-2",
              "kubernetes.io/cluster/layerx-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "layerx-eks-public-subnet-2",
              "kubernetes.io/cluster/layerx-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01dcd84644d12f34c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_6776A399",
            "data.aws_region.vpc_current_561DBC69"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_6776A399",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:961341519925:vpc/vpc-01dcd84644d12f34c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad376484cfdc053a",
            "default_route_table_id": "rtb-04f9841cc00905823",
            "default_security_group_id": "sg-08b99dfbd84758d34",
            "dhcp_options_id": "dopt-0cf87e099152ba702",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01dcd84644d12f34c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f9841cc00905823",
            "owner_id": "961341519925",
            "tags": {
              "Name": "layerx-eks-vpc",
              "kubernetes.io/cluster/layerx-eks": "owned"
            },
            "tags_all": {
              "Name": "layerx-eks-vpc",
              "kubernetes.io/cluster/layerx-eks": "owned"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}